--- a/app/views/shared/_subscription_cards.html.haml
+++ b/app/views/shared/_subscription_cards.html.haml
@@ -8,7 +8,7 @@
           $9.99
           %small.text-muted / mo
         %ul.list-unstyled.mt-3.mb-4
-          %li.fw-bold Two week free trial, cancel anytime!
+          %li.fw-bold Two week free trial, cancel anytime! (beta)
           %li Get started for a low price
           %li Full feature set!
           %li Credit Card Fees (2.9% + 30¢ per charge)
@@ -25,7 +25,7 @@
           $99
           %small.text-muted / year
         %ul.list-unstyled.mt-3.mb-4
-          %li.fw-bold Two week free trial, cancel anytime!
+          %li.fw-bold Two week free trial, cancel anytime! (beta)
           %li Savings of $20 per year
           %li Full feature set!
           %li Credit Card Fees (2.9% + 30¢ per charge)
