Email message uses _url

--- a/app/views/message_mailer/email_message.text.haml
+++ b/app/views/message_mailer/email_message.text.haml
@@ -1,4 +1,5 @@
-You have an unread email at Teensybit
-= "You can read it by #{link_to 'clicking here', [@message.chat.provider.owned_daycare, @message.chat]}. It reads:"
+You have an unread message at Teensybit
+= "You can read it here': #{[@message.chat.provider.owned_daycare, @message.chat]}. It reads:"
 
 = @message.message_body
+``
