Doesn't sanitize html links in message email

--- a/app/views/message_mailer/email_message.html.haml
+++ b/app/views/message_mailer/email_message.html.haml
@@ -1,4 +1,4 @@
 %h2 You have an unread message at Teensybit
-%p= "You can read & respond by #{link_to 'clicking here', daycare_chat_url(@message.chat.provider.owned_daycare, @message.chat)}. It reads: "
+%p!= "You can read & respond by #{link_to 'clicking here', [@message.chat.provider.owned_daycare, @message.chat]}. It reads: "
 
 %p= @message.message_body
