Marks mailer links as html safe And the text versions to not use link_to

--- a/app/views/document_mailer/document_message.html.haml
+++ b/app/views/document_mailer/document_message.html.haml
@@ -1,1 +1,1 @@
-%h2= "Your daycare, #{@document.daycare.name} has uploaded a document for you on Teensy Bit. #{link_to "Check #{@document.title} it out!", [@document.daycare, @document]}"
+%h2= "Your daycare, #{@document.daycare.name} has uploaded a document for you on Teensy Bit. #{link_to("Check #{@document.title} it out!", [@document.daycare, @document]).html_safe}"
