--- a/app/views/stripe_mailer/failed_invoice_payment.html.haml
+++ b/app/views/stripe_mailer/failed_invoice_payment.html.haml
@@ -8,4 +8,4 @@
   Date:
   - @stripe_invoice.created_at
 %div
-  = link_to "View Invoice", @stripe_invoice.hosted_invoice_url
+  != link_to "View Invoice", @stripe_invoice.hosted_invoice_url
