--- a/app/views/stripe_mailer/successful_invoice_payment.text.haml
+++ b/app/views/stripe_mailer/successful_invoice_payment.text.haml
@@ -1,8 +1,8 @@
-= @stripe_customer.user.name
-, your Teensy Bit invoice was successfully paid!
+= "#{@stripe_customer.user.name}, your Teensy Bit invoice was successfully paid!"
 
 Amount: #{@stripe_invoice.total}
 
 Date:
 - @stripe_invoice.created_at
-= link_to "View Invoice", @stripe_invoice.hosted_invoice_url
+View Invoice
+!= @stripe_invoice.hosted_invoice_url
