--- a/app/views/stripe_mailer/successful_subscription_created.html.haml
+++ b/app/views/stripe_mailer/successful_subscription_created.html.haml
@@ -8,4 +8,4 @@
 - if @stripe_subscription.trialing?
   %p
     You are currently on in your trial period, which ends #{@subscription.trial_end.strftime("%d-%m-%Y")}. Afterwhich, you will be charged for your pay period.
-= link_to "Get Started",  %i[new user session]
+!= link_to "Get Started",  %i[new user session]
