--- a/app/views/form_mailer/form_message.text.haml
+++ b/app/views/form_mailer/form_message.text.haml
@@ -1,1 +1,1 @@
-= "Your daycare, #{@form.daycare.name} has uploaded a form for you on Teensy Bit. #{link_to "Check #{@form.title} it out!", [@form.daycare, @form]}"
+= "Your daycare, #{@form.daycare.name} has uploaded a form for you on Teensy Bit. Check #{@form.title} it out! #{daycare_form_url(@form.daycare, @form).html_safe)}"
