--- a/app/views/picture_mailer/picture_message.html.haml
+++ b/app/views/picture_mailer/picture_message.html.haml
@@ -1,1 +1,1 @@
-%h2= "Your child, #{@child_name} has had a photo added of them on Teensy Bit from #{@picture.daycare.name}. #{link_to 'Check it out!', [@picture.daycare, @picture]}"
+%h2= "Your child, #{@child_name} has had a photo added of them on Teensy Bit from #{@picture.daycare.name}. #{link_to('Check it out!', [@picture.daycare, @picture]).html_safe}"
