--- a/app/views/stripe_mailer/successful_autopayment_created.html.haml
+++ b/app/views/stripe_mailer/successful_autopayment_created.html.haml
@@ -1,6 +1,4 @@
-%h2
-  = @name
-  , you successfully began an autopayment plan with your daycare!
+%h2= "#{@name}, you successfully began an autopayment plan with your daycare!"
 %p
   Your payment method will be charged #{number_to_currency(@stripe_price.amount)} every #{@stripe_price.recurring["interval_count"] if @stripe_price.recurring["interval_count"].to_i > 1} #{@stripe_price.recurring["interval"].pluralize(@stripe_price.recurring["interval_count"].to_i)}
-= link_to "Sign In",  %i[new user session]
+!= link_to "Sign In",  %i[new user session]
