Adds child event mailer Fixes other mailer views

--- a/app/views/form_mailer/form_message.html.haml
+++ b/app/views/form_mailer/form_message.html.haml
@@ -1,1 +1,2 @@
-%h2= "Your daycare, #{@form.daycare.name} has created a form for you on Teensy Bit. #{link_to("Check #{@form.title} it out!", [@form.daycare, @form]).html_safe}"
+%h2= "Your daycare, #{@form.daycare.name} has uploaded/edited a form for you on Teensy Bit."
+%h2!= link_to("Check #{@form.title} it out!", [@form.daycare, @form]).html_safe
