Fix stripe prices mobile view & some spelling for documents explination

--- a/app/views/daycares/provider_dashboard.html.haml
+++ b/app/views/daycares/provider_dashboard.html.haml
@@ -130,7 +130,7 @@
             - else
               %p
                 This is were you will see your most recently uploaded documents.
-                You can make these accessable to parents so they can view/download and reupload.
+                You can make these accessible to parents so they can view/download and re-upload.
                 Get started uploading right away with "Upload Document",
                 but to send to specific parents you must first add them.
     .row.mb-4
