Adds request spec coverage Along with bug fixes found

--- a/app/javascript/src/stylesheets/home.scss
+++ b/app/javascript/src/stylesheets/home.scss
@@ -48,7 +48,7 @@ body {
   }
 
   #home-top-cover {
-    background-image: image-url("daycare-kids-blocks.jpg");
+    background-image: url("~images/daycare-kids-blocks.jpg");
     background-size: cover;
     background-position: 0% 40%;
   }
