--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -47,7 +47,7 @@
           %p.lead Never have a missed or late payment again. You will be able to set all your parents up on an automatic daycare payment schedule that will save you time and ensure you get your hard earned dollars into your account. If auto payments aren't for you, then we will send invoices for you, and reminders via many communication channels to ensure you get your payments.
           .w-100.mb-3.btn.btn-lg-btn-primary= link_to "Get Auto-Payments", "/#pricing"
         .col-md-5.xl-font.d-inline-flex.align-items-center.justify-content-center
-          = image_tag("paying-online.jpg", class: "img-fluid featurette-image mx-auto")
+          = image_pack_tag("paying-online.jpg", class: "img-fluid featurette-image mx-auto")
       %hr.featurette-divider
         #paperwork.row.featurette
           .col-md-7.order-md-2
@@ -57,7 +57,7 @@
             %p.lead There are so many forms that parents need to read, sign, and for you to keep up on. Create these in the app so it will keep up on them automatically for you, and make them available wherever the internet is!
             .w-100.mb-3.btn.btn-lg-btn-primary= link_to "Get Online Paperwork", "/#pricing"
           .col-md-5.xl-font.d-inline-flex.align-items-center.justify-content-center.order-md-1
-            = image_tag("online-paper-work.jpg", class: "img-fluid featurette-image mx-auto")
+            = image_pack_tag("online-paper-work.jpg", class: "img-fluid featurette-image mx-auto")
         %hr.featurette-divider
           #sharing.row.featurette
             .col-md-7
@@ -67,7 +67,7 @@
               %p.lead Take a photo, tag the kids in it, done. Its now automatically shared and available to the parents it may concern. Do this with any document or text you may need to share with parents. Easy, simple and saves you time and makes parents happy!
               .w-100.mb-3.btn.btn-lg-btn-primary= link_to " Get Photo & File Sharing", "/#pricing"
             .col-md-5.xl-font.d-inline-flex.align-items-center.justify-content-center
-              = image_tag("kid-taking-photo.jpg", class: "img-fluid featurette-image mx-auto")
+              = image_pack_tag("kid-taking-photo.jpg", class: "img-fluid featurette-image mx-auto")
           %hr.featurette-divider
             #messaging.row.featurette
               .col-md-7.order-md-2
@@ -77,7 +77,7 @@
                 %p.lead Often you need to message all your parents in your daycare, or a select group of them. This makes it easy to message them via email, text or in-app messages. Report on important events that happen, like when they took a bottle or napped. All in one place. Easy.
                 .w-100.mb-3.btn.btn-lg-btn-primary= link_to "Get Messaging", "/#pricing"
               .col-md-5.xl-font.d-inline-flex.align-items-center.justify-content-center.order-md-1
-                = image_tag("messaging.jpg", class: "img-fluid featurette-image mx-auto")
+                = image_pack_tag("messaging.jpg", class: "img-fluid featurette-image mx-auto")
             %hr.featurette-divider
             / /END THE FEATURETTES
             / START THE PRICING
