--- a/app/views/stripe_prices/new.html.haml
+++ b/app/views/stripe_prices/new.html.haml
@@ -1,3 +1,3 @@
 .container
   %h1 New Recurring Payment Plan
-  = render 'form', stripe_price: @stripe_price
+  = render partial: 'form', locals: { stripe_price: @stripe_price, daycare: @daycare }
